--- a/oveterano.html
+++ b/oveterano.html
@@ -33,7 +33,7 @@
 					</li>
 					<li><a href="#">Preview</a></li>
 					<li><a href="#">Sobre</a></li>
-					<li><a href="#">Contato</a></li>
+					<li><a href="#contato" data-toggle="modal">Contato</a></li>
 				</ul>
 			</div>
 		</div>
@@ -78,6 +78,24 @@
 			<a href="#" class="navbar-btn btn-danger btn pull-right">Se Inscrever!</a>
 		</div>
 	</div>
+	
+	<div class="modal fade" id="contato" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4>Contact Site</h4>
+				</div>
+				<div class="modal-body">
+					<p>texto texto muuuuuito texto e mais texto hehehehehe</p>
+				</div>
+				<div class="modal-footer">
+					<a class="btn btn-default" data-dismiss="modal">Enviar</a>
+					<a class="btn btn-primary" data-dismiss="modal">Close</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="bootstrap-3.3.4-dist/js/bootstrap.js" type="text/javascript"></script>
 
