mais leandro e sobre

--- a/oveterano.html
+++ b/oveterano.html
@@ -40,7 +40,7 @@
 
 	</div>
 
-	<div class="container">
+	<div class="container"> <!--jumbotron -->
 		<div class="jumbotron text-center">
 			<h1>O Veterano</h1>
 			<h3>Em breve</h3>
@@ -49,27 +49,46 @@
 			<a href="#" class="btn btn-default">Tour</a>
 			<a href="#" class="btn btn-info">Tweet it!</a>
 		</div>
-
 	</div>
-	<div class="container">
+	<div class="container"> <!--Equipe -->
 		<div class="row">
 			<div class="col-md-12 text-center"><h2>Equipe</h2></div>
-			<div class="col-md-offset-3 col-md-3 text-center">
+			<div class="col-md-offset-1 col-md-3 text-center">
 				
 				<img src="img/marcelo.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Marcelo da Fonseca</a></h3>
-				<p>Marcelo da Fonseca. Cursando Ciência da Computação Bacharel  
+				<p>Aluno de Graduação. Atualmente Cursando Ciência da Computação Bacharel  
 				na UnB. Desenvolvedor e Fundador.</p>
 				<a href="#" class="btn btn-default">Ver Perfil</a>
 			</div>
 			<div class="col-md-3 text-center">
 				<img src="img/ozaka.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Guilherme Ozaka</a></h3>
-				<p>Guilherme Ozaka.Cursando Ciência da Computação Bacharel  
+				<p>Aluno de graduação.Cursando Computação Licenciatura  
 				na UnB. Desenvolvedor e Co-fundador.</p>
 				<a href="#" class="btn btn-default">Ver Perfil</a>
 			</div>
+			<div class="col-md-3 text-center">
+				<img src="img/leandro.png" class="img-responsive img-circle" alt="Responsive image">
+				<h3><a href="#">Leandro Ferreira</a></h3>
+				<p>Aluno de graduação.Cursando Computação Licenciatura  
+				na UnB. Desenvolvedor e Goy.</p>
+				<a href="#" class="btn btn-default">Ver Perfil</a>
+			</div>
 		</div>
+	</div>
+
+	<div class="container"> <!--Sobre -->
+		<div class="row">
+			<div class="col-md-12 text-center"><h2>Sobre</h2></div>
+			<div class="col-md-offset-3 col-md-4">
+				<p>Encontrar referências confiáveis podem muitas vezes ser complicadas e o aluno meio perdido na hora de estudar. Para combater esse problema O veterano
+				O Veterano é um projeto de plataforma web voltada para os estudantes de ensino superior.
+				 </p>	
+
+			</div>
+		</div>
+
 	</div>
 
 	<div class="navbar navbar-default navbar-fixed-bottom">
@@ -79,6 +98,7 @@
 		</div>
 	</div>
 	
+
 	<div class="modal fade" id="contato" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -86,7 +106,8 @@
 					<h4>Contact Site</h4>
 				</div>
 				<div class="modal-body">
-					<p>texto texto muuuuuito texto e mais texto hehehehehe</p>
+					<p>texto texto muuuuuito texto e mais texto hehehehehe
+					O que você quer nos dizeeeeer</p>
 				</div>
 				<div class="modal-footer">
 					<a class="btn btn-default" data-dismiss="modal">Enviar</a>
