--- a/web/home.html
+++ b/web/home.html
@@ -53,19 +53,21 @@
 	<div class="container"> <!--Equipe -->
 		<div class="row">
 			<div class="col-md-12 text-center"><h2>Equipe</h2></div>
+		</div>
+		<div class="row">
 			<div class="col-md-offset-1 col-md-3 text-center">
 				
 				<img src="img/marcelo.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Marcelo da Fonseca</a></h3>
-				<p>Aluno de Graduação. Atualmente Cursando Ciência da Computação Bacharel  
-				na UnB. Desenvolvedor e Fundador.</p>
+				<p>Eu sou o Marcelo, tenho 23 anos. Acredito como principal fonte para inovar a motivação de sempre seguir em frente. Atualmente estou Cursando Ciência da Computação Bacharel  
+				na UnB. Isso me permitiu no projeto, também ter o papel como desenvolvedor.</p>
 				<a href="#" class="btn btn-default">Ver Perfil</a>
 			</div>
 			<div class="col-md-3 text-center">
 				<img src="img/ozaka.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Guilherme Ozaka</a></h3>
 				<p>Aluno de graduação.Cursando Computação Licenciatura  
-				na UnB. Desenvolvedor e Co-fundador.</p>
+				na UnB. Programador e empreendedor movido. Movido por novas experiências.</p>
 				<a href="#" class="btn btn-default">Ver Perfil</a>
 			</div>
 			<div class="col-md-3 text-center">
@@ -78,12 +80,14 @@
 		</div>
 	</div>
 
-	<div class="container"> <!--Sobre -->
+	<div class="container "> <!--Sobre -->
 		<div class="row">
-			<div class="col-md-12 text-center"><h2>Sobre</h2></div>
-			<div class="col-md-offset-3 col-md-4">
-				<p>Encontrar referências confiáveis podem muitas vezes ser complicadas e o aluno meio perdido na hora de estudar. Para combater esse problema O veterano
-				O Veterano é um projeto de plataforma web voltada para os estudantes de ensino superior.
+			<div class="col-md-12 text-center"><h2>Equipe</h2></div>
+		</div>
+		<div class="row">
+			<div class="col-md-offset-3 col-md-6">
+				<p>Encontrar referências confiáveis podem muitas vezes ser complicadas e o aluno meio perdido na hora de estudar de acordo com a ementa de cada professor. E é essa o problema que atacamos com O Veterano.
+				O Veterano é um projeto de plataforma web voltada para os estudantes de ensino superior. Uma rede colaborativa para a elaboração e compartilhamento de materiais entre os próprios usuários
 				 </p>	
 
 			</div>
