ver perfil mandando pro linkedin

--- a/web/home.html
+++ b/web/home.html
@@ -61,14 +61,14 @@
 				<h3><a href="#">Marcelo da Fonseca</a></h3>
 				<p>Eu sou o Marcelo, tenho 23 anos. Acredito como principal fonte para inovar a motivação de sempre seguir em frente. Atualmente estou Cursando Ciência da Computação Bacharel  
 				na UnB. Isso me permitiu no projeto, também ter o papel como desenvolvedor.</p>
-				<a href="#" class="btn btn-default">Ver Perfil</a>
+				<a href="https://br.linkedin.com/pub/marcelo-fonseca/b0/444/2ab" class="btn btn-default">Ver Perfil</a>
 			</div>
 			<div class="col-md-3 text-center">
 				<img src="img/ozaka.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Guilherme Ozaka</a></h3>
 				<p>Aluno de graduação.Cursando Computação Licenciatura  
 				na UnB. Programador e empreendedor movido. Movido por novas experiências.</p>
-				<a href="#" class="btn btn-default">Ver Perfil</a>
+				<a href="https://br.linkedin.com/pub/guilherme-ozaka/64/8a0/842" class="btn btn-default">Ver Perfil</a>
 			</div>
 			<div class="col-md-3 text-center">
 				<img src="img/leandro.png" class="img-responsive img-circle" alt="Responsive image">
@@ -82,7 +82,7 @@
 
 	<div class="container "> <!--Sobre -->
 		<div class="row">
-			<div class="col-md-12 text-center"><h2>Equipe</h2></div>
+			<div class="col-md-12 text-center"><h2>Sobre</h2></div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-3 col-md-6">
