Alterei o perfil do leandro

--- a/web/home.html
+++ b/web/home.html
@@ -36,6 +36,7 @@
 					<li><a href="#contato" data-toggle="modal">Contato</a></li>
 				</ul>
 			</div>
+
 		</div>
 
 	</div>
@@ -55,29 +56,26 @@
 			<div class="col-md-12 text-center"><h2>Equipe</h2></div>
 			<div class="col-md-offset-1 col-md-3 text-center">
 				
-				<img src="img/marcelo.png" class="img-responsive img-circle" alt="Responsive image">
-				<h3><a href="#">Marcelo da Fonseca</a></h3>
-				<p>Aluno de Graduação. Atualmente Cursando Ciência da Computação Bacharel  
-				na UnB. Desenvolvedor e Fundador.</p>
-				<a href="#" class="btn btn-default">Ver Perfil</a>
-			</div>
-			<div class="col-md-3 text-center">
-				<img src="img/ozaka.png" class="img-responsive img-circle" alt="Responsive image">
-				<h3><a href="#">Guilherme Ozaka</a></h3>
-				<p>Aluno de graduação.Cursando Computação Licenciatura  
-				na UnB. Desenvolvedor e Co-fundador.</p>
-				<a href="#" class="btn btn-default">Ver Perfil</a>
-			</div>
+			<img src="img/marcelo.png" class="img-responsive img-circle" alt="Responsive image">
+ 				<h3><a href="#">Marcelo da Fonseca</a></h3>
+				<p>Eu sou o Marcelo, tenho 23 anos. Acredito como principal fonte para inovar a motivação de sempre seguir em frente. Atualmente estou Cursando Ciência da Computação Bacharel na UnB. Isso me permitiu no projeto, também ter o papel como desenvolvedor.</p>
+ 				<a href="#" class="btn btn-default">Ver Perfil</a>
+ 			</div>
+ 			<div class="col-md-3 text-center">
+ 				<img src="img/ozaka.png" class="img-responsive img-circle" alt="Responsive image">
+ 				<h3><a href="#">Guilherme Ozaka</a></h3>
+ 				<p>Aluno de graduação.Cursando Computação Licenciatura na UnB. Programador e empreendedor movido. Movido por novas experiências.</p>
+ 				<a href="#" class="btn btn-default">Ver Perfil</a>
+ 			</div>
 			<div class="col-md-3 text-center">
 				<img src="img/leandro.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Leandro Ferreira</a></h3>
-				<p>Aluno de graduação.Cursando Computação Licenciatura  
-				na UnB. Desenvolvedor e Goy.</p>
+				<p>	Aluno de graduação.Cursando Computação Bacharelado na UnB. Já foi Gerente de Projetos de Externos na CJR por 2 Anos, agora é desenvolvedor. O que me motiva é ser o melhor no que eu faço por meus colegas e família.
+				</p>
 				<a href="#" class="btn btn-default">Ver Perfil</a>
 			</div>
 		</div>
 	</div>
-
 	<div class="container"> <!--Sobre -->
 		<div class="row">
 			<div class="col-md-12 text-center"><h2>Sobre</h2></div>
