--- a/web/home.html
+++ b/web/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>O veterano</title>
+	<title>O Veterano</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="bootstrap-3.3.4-dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/oveterano.css">
-
+	<link rel="icon" type="image/ico" href="img/favicon.ico" />
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-static-top">
@@ -25,7 +25,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle = "dropdown">Social Media<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Facebook</a></li>
+							<li><a href="https://www.facebook.com/paginaoveterano">Facebook</a></li>
 							<li><a href="#">Twitter</a></li>
 							<li><a href="#">Google+</a></li>
 							<li><a href="#">Instagram</a></li>
@@ -109,7 +109,7 @@
 
 	<div class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container">
-			<p class="navbar-text">Site feito por Marcelo</p>
+			<p class="navbar-text">Site feito por Marcelo com ajuda de Leandro</p>
 			<a href="#" class="navbar-btn btn-danger btn pull-right">Se Inscrever!</a>
 		</div>
 	</div>
