Mudança na descriçao leandro

--- a/web/home.html
+++ b/web/home.html
@@ -73,7 +73,7 @@
 			<div class="col-md-3 text-center">
 				<img src="img/leandro.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Leandro Ferreira</a></h3>
-				<p>	Aluno de graduação.Cursando Computação Bacharelado na UnB. Já foi Gerente de Projetos de Externos na CJR por 2 Anos, agora é desenvolvedor. O que me motiva é ser o melhor no que eu faço por meus colegas e família.
+				<p>	Aluno de graduação.Cursando Computação Bacharelado na UnB. Já foi Gerente de Projetos de Externos na CJR por 2 Anos, acumulo 5 anos de Web Design. O que me motiva é ser o melhor no que eu faço por meus colegas e família.
 				</p>
 				<a href="https://www.linkedin.com/pub/leandro-ferreira/8b/9b1/836" class="btn btn-default">Ver Perfil</a>
 			</div>
