--- a/oveterano.html
+++ b/oveterano.html
@@ -71,8 +71,8 @@
 			<div class="col-md-3 text-center">
 				<img src="img/leandro.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Leandro Ferreira</a></h3>
-				<p>Aluno de graduação.Cursando Computação Licenciatura  
-				na UnB. Desenvolvedor e Goy.</p>
+				<p>	Aluno de graduação.Cursando Computação Bacharelado na UnB. Já foi Gerente de Projetos de Externos na CJR por 2 Anos, acumulo 5 anos de Web Design. O que me motiva é ser o melhor no que eu faço por meus colegas e família.
+				</p>
 				<a href="#" class="btn btn-default">Ver Perfil</a>
 			</div>
 		</div>
