--- a/web/home.html
+++ b/web/home.html
@@ -21,7 +21,7 @@
 			<div class="collapse navbar-collapse navHeaderCollapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="#">Home</a></li>
-					<li id="b-equipe"><a href="#">Equipe</a></li>
+					<li id="b-equipe"><a href="#">Team</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle = "dropdown">Social Media<b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -52,30 +52,28 @@
 	</div>
 	<div class="container"> <!--Equipe -->
 		<div class="row">
-			<div id="equipe" class="col-md-12 text-center"><h2>Equipe</h2></div>
+			<div id="equipe" class="col-md-12 text-center"><h2>Team</h2></div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-1 col-md-3 text-center">
 				
 				<img src="img/marcelo.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Marcelo da Fonseca</a></h3>
-				<p>Eu sou o Marcelo, tenho 23 anos. Acredito como principal fonte para inovar a motivação de sempre seguir em frente. Atualmente estou Cursando Ciência da Computação Bacharel  
-				na UnB. Isso me permitiu no projeto, também ter o papel como desenvolvedor.</p>
-				<a href="https://br.linkedin.com/pub/marcelo-fonseca/b0/444/2ab" class="btn btn-default">Ver Perfil</a>
+				<p>I'm Marcelo, i'm 23 years old. I believe as the main source for innovation, is the motivation to always move forward. I am currently Studying Computer Science Bachelor in UnB. This allowed me in the project to also act as a developer.</p>
+				<a href="https://br.linkedin.com/pub/marcelo-fonseca/b0/444/2ab" class="btn btn-default">See profile</a>
 			</div>
 			<div class="col-md-3 text-center">
 				<img src="img/ozaka.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Guilherme Ozaka</a></h3>
-				<p>Eu sou Guilherme, aluno de graduação. Estou cursando Computação Licenciatura  
-				na UnB. Sou Programador e empreendedor. Movido por novas experiências.</p>
-				<a href="https://br.linkedin.com/pub/guilherme-ozaka/64/8a0/842" class="btn btn-default">Ver Perfil</a>
+				<p>I am Guilherme, graduate student. I'm studying Computer Degree at UnB. I am a programmer and entrepreneur. Driven by new experiences.</p><br><br>
+				<a href="https://br.linkedin.com/pub/guilherme-ozaka/64/8a0/842" class="btn btn-default">See profile</a>
 			</div>
 			<div class="col-md-3 text-center">
 				<img src="img/leandro.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Leandro Ferreira</a></h3>
-				<p>Aluno de graduação.Cursando Computação Licenciatura  
-				na UnB. Desenvolvedor e Goy.</p>
-				<a href="#" class="btn btn-default">Ver Perfil</a>
+				<p>I'm a graduate student . I'm Studying Bachelor in Computer in UnB . I've been External Projects Manager at CJR company for 2 years and accumulate five years of Web Design. What motivates me is wanting to be the best at what I do for my 
+				colleagues and family.</p>
+				<a href="#" class="btn btn-default">See profile</a>
 			</div>
 		</div>
 	</div>
@@ -110,13 +108,13 @@
 
 	<div class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container">
-			<p class="navbar-text">Site feito por Marcelo</p>
+			<p class="navbar-text"><img src="img/logo-horizontal-small.png" class="img-responsive"></p>
 			<a href="#" class="navbar-btn btn-danger btn pull-right">Se Inscrever!</a>
 		</div>
 	</div>
 	
 
-	<div class="modal fade" id="contato" role="dialog">
+	<div class="modal fade" id="contato" role="dialog"><!--Contato -->
 		<div class="modal-dialog">
 			<div class="modal-content">
 				
