--- a/web/home.html
+++ b/web/home.html
@@ -25,7 +25,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle = "dropdown">Social Media<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Facebook</a></li>
+							<li><a href="https://www.facebook.com/paginaoveterano">Facebook</a></li>
 							<li><a href="#">Twitter</a></li>
 							<li><a href="#">Google+</a></li>
 							<li><a href="#">Instagram</a></li>
