mudei o sobre e descricao leandro

--- a/web/home.html
+++ b/web/home.html
@@ -71,7 +71,7 @@
 			<div class="col-md-3 text-center">
 				<img src="img/leandro.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Leandro Ferreira</a></h3>
-				<p> I am 24 year old graduate student of Computer Science at UnB. I had been External Project Manager at CJR for 2 years and had been involved for more than 10 Web Projects. 4 years of experience in the field of Web Development. What drives me today is the goal of being the best what I do for my coleagues and family. 
+				<p> I am 24 year old graduate student of Computer Science at UnB and I had been External Project Manager at CJR,4 years of experience in the field of Web Development. What drives me today is the goal of being the best what I do for my coleagues and family. 
 				</p>
 				<a href="https://www.linkedin.com/pub/leandro-ferreira/8b/9b1/836" class="btn btn-default">Ver Perfil</a>
 			</div>
@@ -79,14 +79,14 @@
 	</div>
 	<div class="container "> <!--Sobre -->
 		<div class="row">
-			<div id="sobre" class="col-md-12 text-center"><h2>Sobre</h2></div>
+			<div id="sobre" class="col-md-12 text-center"><h2>About</h2></div>
 		</div>
 		<div class="row">
 			<div class="col-md-offset-3 col-md-6">
-				<p>Para o aluno de ensino superior. Raramente temos livros em mãos por conta de seus custos. Encontrar referências confiáveis, principalmente na internet, se tornam situações complicadas. Sendo assim o aluno ainda precisa saber o conteúdo da ementa cobrada de cada professor. E é essa o problema que atacamos com O Veterano.
-				O intuito do projeto é, por uma plataforma, se voltar para os estudantes de ensino superior e dar o apoio que faltava para os alunos com dificuldade. Os materias elaborados são para uma dada turma em específico. Como assim? Os materiais elaborados vão baseados na ementar e cobrança aplicada para a turma em específico. Então, teremos uma rede colaborativa para, a elaboração e compartilhamento de materiais entre os próprios usuários para suas respectivas turmas.
-				 </p>	
-
+				 <p>
+				 	Undergraduate students rarely have in hands books because of its cost. Finding trustworthy references becomes a very complicated situation, especially on the internet. Plus, The students have to know the contents of each syllabus demanded by the professors. And that's the problem we attack with our product.
+				 	The project's goal is to focus on giving support to undergraduate students that have learning difficulties by a web platform. The material elaborated are class specific. How so? The materials will be based in the class syllabus and the professor's demands of that class. So we will have a colaborative network for elaborating and sharing materials between users for their respective classes.
+				 </p>
 			</div>
 		</div>
 
@@ -173,3 +173,7 @@ conteudo
 2.ferramentas (css, js)
 3.navbar
  -->
+ <!--<p>Para o aluno de ensino superior. Raramente temos livros em mãos por conta de seus custos. Encontrar referências confiáveis, principalmente na internet, se tornam situações complicadas. Sendo assim o aluno ainda precisa saber o conteúdo da ementa cobrada de cada professor. E é essa o problema que atacamos com O Veterano.
+				O intuito do projeto é, por uma plataforma, se voltar para os estudantes de ensino superior e dar o apoio que faltava para os alunos com dificuldade. Os materias elaborados são para uma dada turma em específico. Como assim? Os materiais elaborados vão baseados na ementar e cobrança aplicada para a turma em específico. Então, teremos uma rede colaborativa para, a elaboração e compartilhamento de materiais entre os próprios usuários para suas respectivas turmas.
+				 </p>
+				 -->	
