--- a/web/home.html
+++ b/web/home.html
@@ -98,9 +98,8 @@
 		</div>
 		<div class="row">
 			<div class="col-md-offset-3 col-md-6">
-				<p>*inserir imagem da plataforma*
-				 </p>	
-				 <img class="img-responsive" src="">
+	
+				 <img class="img-responsive" src="img/tela-login-vet.jpg">
 			</div>
 		</div>
 
@@ -169,8 +168,28 @@ $("#b-preview").click(function() {
 });
 </script>
 <!--
-conteudo
-1.viewport
-2.ferramentas (css, js)
-3.navbar
+Traducao
+
+Ingles
+
+Marcelo
+Eu sou o Marcelo, tenho 23 anos. Acredito como principal fonte para inovar a motivação de sempre seguir em frente. Atualmente estou Cursando Ciência da Computação Bacharel na UnB. Isso me permitiu no projeto, também ter o papel como desenvolvedor.
+
+I'm Marcelo, i'm 23 years old. I believe as the main source for innovation, is the motivation to always move forward. I am currently Studying Computer Science Bachelor in UnB. This allowed me in the project to also act as a developer.
+
+
+Ozaka
+Eu sou Guilherme, aluno de graduação. Estou cursando Computação Licenciatura na UnB. Sou Programador e empreendedor. Movido por novas experiências.
+
+
+I am Guilherme, graduate student. I'm studying Computer Degree at UnB. I am a programmer and entrepreneur. Driven by new experiences.
+
+
+Leandro
+Sou Aluno de graduação. Estou Cursando Computação Bacharelado na UnB. Já fui Gerente de Projetos de Externos na empresa 
+CJR por 2 Anos e acumulo 5 anos de Web Design. O que me motiva é querer ser o melhor no que eu faço por meus colegas e 
+família.
+
+I'm a graduate student . I'm Studying Bachelor in Computer in UnB . I've been External Projects Manager at CJR company for 2 years and accumulate five years of Web Design. What motivates me is wanting to be the best at what I do for my 
+colleagues and family.
  -->
