--- a/web/home.html
+++ b/web/home.html
@@ -43,9 +43,10 @@
 
 	<div class="container"> <!--jumbotron -->
 		<div class="jumbotron text-center">
+			<img src="img/icone-small.png" >
 			<h1>O Veterano</h1>
 			<h3>Em breve</h3>
-			<h2>Entrar imagem da plataforma aqui</h2>
+			
 			<p>Nosso objetivo é oferecer uma rede colaborativa com os estudantes e garantir melhor troca de experiência acadêmica através de uma plataforma web</p>
 			<a href="#" class="btn btn-default">Preview</a>
 			<a href="#" class="btn btn-info">Tweet it!</a>
@@ -65,13 +66,13 @@
 			<div class="col-md-3 text-center">
 				<img src="img/ozaka.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Guilherme Ozaka</a></h3>
-				<p>I am Guilherme, graduate student. I'm studying Computer Degree at UnB. I am a programmer and entrepreneur. Driven by new experiences.</p><br><br>
+				<p>I am Guilherme, undergraduate student. I'm studying Computer Degree at UnB. I am a programmer and entrepreneur. Driven by new experiences.</p><br><br>
 				<a href="https://br.linkedin.com/pub/guilherme-ozaka/64/8a0/842" class="btn btn-default">See profile</a>
 			</div>
 			<div class="col-md-3 text-center">
 				<img src="img/leandro.png" class="img-responsive img-circle" alt="Responsive image">
 				<h3><a href="#">Leandro Ferreira</a></h3>
-				<p> I am 24 year old graduate student of Computer Science at UnB and I had been External Project Manager at CJR,4 years of experience in the field of Web Development. What drives me today is the goal of being the best what I do for my coleagues and family. 
+				<p> I am 24 year old. Undergraduate student of Computer Science at UnB and I had been External Project Manager at CJR,4 years of experience in the field of Web Development. What drives me today is the goal of being the best what I do for my coleagues and family. 
 				</p>
 				<a href="https://www.linkedin.com/pub/leandro-ferreira/8b/9b1/836" class="btn btn-default">Ver Perfil</a>
 			</div>
