--- a/web/home.html
+++ b/web/home.html
@@ -26,13 +26,13 @@
 						<a href="#" class="dropdown-toggle" data-toggle = "dropdown">Social Media<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="https://www.facebook.com/paginaoveterano">Facebook</a></li>
-							<li><a href="#">Twitter</a></li>
+							<li><a href="https://twitter.com/VeteranoOficial">Twitter</a></li>
 							<li><a href="#">Google+</a></li>
 							<li><a href="#">Instagram</a></li>
 						</ul>
 					</li>
 					<li><a id="b-preview" href="#">Preview</a></li>
-					<li id="b-sobre"><a href="#">Sobre</a></li>
+					<li id="b-sobre"><a href="#">About</a></li>
 					<li><a href="#contato" data-toggle="modal">Contato</a></li>
 				</ul>
 			</div>
@@ -44,7 +44,7 @@
 	<div class="container"> <!--jumbotron -->
 		<div class="jumbotron text-center">
 			<h1>O Veterano</h1>
-			<h3>Em breve</h3>
+			<h3>Soon</h3>
 			<h2>Entrar imagem da plataforma aqui</h2>
 			<p>Nosso objetivo é oferecer uma rede colaborativa com os estudantes e garantir melhor troca de experiência acadêmica através de uma plataforma web</p>
 			<a href="#" class="btn btn-default">Preview</a>
@@ -97,7 +97,6 @@
 		</div>
 		<div class="row">
 			<div class="col-md-offset-3 col-md-6">
-	
 				 <img class="img-responsive" src="img/tela-login-vet.jpg">
 			</div>
 		</div>
