--- a/web/home.html
+++ b/web/home.html
@@ -69,6 +69,13 @@
 				</p>
 				<a href="https://www.linkedin.com/pub/leandro-ferreira/8b/9b1/836" class="btn btn-default">Ver Perfil</a>
 			</div>
+			<div class="col-md-3 text-center">
+				<img src="img/geminho.png" class="img-responsive img-circle" alt="Responsive image">
+				<h3><a href="#">Guilherme Nakandari</a></h3>
+				<p> Eu sou o Guilherme Aluno de Computação e ajudar é o meu hobby. 
+				</p>
+				<a href="https://www.linkedin.com/pub/leandro-ferreira/8b/9b1/836" class="btn btn-default">Ver Perfil</a>
+			</div>
 		</div>
 	</div>
 	<div class="container "> <!--Sobre -->
